# Omniscent_win32

./: CMakeLists.txt  README.md  omniscent_all.c
src/: camera.c  camera.h  lightmap.c  lightmap.h  main.c  midi.c  midi.h  model.c  model.h  omniscent.c  omniscent.h  palette.c  palette.h  random.c  random.h  renderer_common.c  renderer_common.h  renderer_gl.c  renderer_gl.h  renderer_sw.c  renderer_sw.h  texture.c  texture.h  util.c  util.h
